--- a/styling-react/src/App.css
+++ b/styling-react/src/App.css
@@ -2,18 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
+.App .logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App .logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.App header {
+  /*.App안에 들어있는 header
+    header 클래스가 아닌 header 태그 자체에 스타일을 적용하므로 .생략 */
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -25,6 +27,11 @@
 }
 
 .App-link {
+  color: #61dafb;
+}
+
+.App a {
+  /* App 안에 들어있는 a 태그 */
   color: #61dafb;
 }
 
