--- a/styling-react/src/CSSModule.module.css
+++ b/styling-react/src/CSSModule.module.css
@@ -5,7 +5,11 @@
   color: white;
   font-size: 2rem;
 }
-
+.inverted {
+  color: black;
+  background: white;
+  border: 1px solid black;
+}
 /*글로벌 css를 작성할 때*/
 :global .something {
   font-weight: 800;
