--- a/todo-app/src/components/TodoListItem.scss
+++ b/todo-app/src/components/TodoListItem.scss
@@ -1,10 +1,17 @@
+.TodoListItem-virtualized {
+  & + & {
+    border-top: 1px solid #dee2e6;
+  }
+  &:nth-child(even) {
+    background: #f8f9fa;
+  }
+} //컴포넌트 사이사이에 테두리를 쳐주고, 리스트 항목별 홀/짝수 색 설정
+
 .TodoListItem {
   padding: 1rem;
   display: flex;
   align-items: center; //세로 중앙 정렬
-  &:nth-child(even) {
-    background: #f8f9fa;
-  }
+
   .checkbox {
     //할 일 체크박스
     cursor: pointer;
@@ -44,7 +51,4 @@
     }
   }
   //엘리먼트 사이사이에 테두리를 넣어줌
-  & + & {
-    border-top: 1px solid #dee2e6;
-  }
 }
